--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Insertando CSS</title>
     <!-- ! Estilos CSS Externa-->
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
     <!-- ! Estilos CSS Interna -->
     <style>
         /* estilos css */
@@ -30,7 +30,28 @@
         </ul>
     </nav>
     <main>
-        <section>
+        <article>
+            <h2 class="tituloDos ">Titulo</h2>
+            <img src="https://placekitten.com/200" alt="gatitos">
+            <p class="normal aLaDerecha">Descripción: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ab natus magni incidunt, expedita eius facere aut, doloribus, consectetur impedit itaque. Quia tempora earum mollitia similique quasi numquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam odio hic ipsum quis. Consequuntur neque porro, esse accusantium sed dolorum consectetur corporis adipisci quam nulla, quae id natus sit vitae!
+            Excepturi, veniam adipisci. Rem, hic cum alias dignissimos natus omnis enim laudantium, similique sit officia quas aut delectus. Fugit id architecto ullam sapiente cupiditate, itaque natus quidem earum numquam voluptatem.
+            Fugiat maiores ratione tempore, voluptate mollitia possimus perferendis, dolor architecto, exercitationem sed voluptas quaerat omnis iste dolorum obcaecati illo ullam? Culpa corporis repudiandae quo ducimus facilis quas ut veniam tempora! Vitae, veniam?</p>
+            <h2>Titulo</h2>
+            <img src="https://placekitten.com/200" alt="gatitos">
+            <p class="cursiva negrita justificar interlineado">Descripción: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ab natus magni incidunt, expedita eius facere aut, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam minus ratione sed ipsum, possimus nostrum aspernatur blanditiis. Pariatur suscipit perspiciatis aliquam recusandae voluptatem doloribus odit ab, voluptas exercitationem odio incidunt!
+            Cum aliquid voluptatum quisquam. Nam hic dignissimos quas, laudantium facilis soluta sunt quisquam vitae impedit consectetur. Impedit adipisci amet nostrum architecto dignissimos expedita ducimus repellendus. Fugiat nostrum ratione quaerat omnis. doloribus, consectetur impedit itaque. Quia tempora earum mollitia similique quasi numquam! Vitae, veniam?</p>
+        </article>
+        <article>
+            <h2 class="tituloDos ">Titulo</h2>
+            <img src="https://placekitten.com/200" alt="gatitos">
+            <p class="normal aLaDerecha">Descripción: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ab natus magni incidunt, expedita eius facere aut, doloribus, consectetur impedit itaque. Quia tempora earum mollitia similique quasi numquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam odio hic ipsum quis. Consequuntur neque porro, esse accusantium sed dolorum consectetur corporis adipisci quam nulla, quae id natus sit vitae!
+            Excepturi, veniam adipisci. Rem, hic cum alias dignissimos natus omnis enim laudantium, similique sit officia quas aut delectus. Fugit id architecto ullam sapiente cupiditate, itaque natus quidem earum numquam voluptatem.
+            Fugiat maiores ratione tempore, voluptate mollitia possimus perferendis, dolor architecto, exercitationem sed voluptas quaerat omnis iste dolorum obcaecati illo ullam? Culpa corporis repudiandae quo ducimus facilis quas ut veniam tempora! Vitae, veniam?</p>
+            <h2>Titulo</h2>
+            <img src="https://placekitten.com/200" alt="gatitos">
+            <p class="cursiva negrita justificar interlineado">Descripción: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ab natus magni incidunt, expedita eius facere aut, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam minus ratione sed ipsum, possimus nostrum aspernatur blanditiis. Pariatur suscipit perspiciatis aliquam recusandae voluptatem doloribus odit ab, voluptas exercitationem odio incidunt!
+            Cum aliquid voluptatum quisquam. Nam hic dignissimos quas, laudantium facilis soluta sunt quisquam vitae impedit consectetur. Impedit adipisci amet nostrum architecto dignissimos expedita ducimus repellendus. Fugiat nostrum ratione quaerat omnis. doloribus, consectetur impedit itaque. Quia tempora earum mollitia similique quasi numquam! Vitae, veniam?</p>
+        </article>
             <article>
                 <h2 class="tituloDos ">Titulo</h2>
                 <img src="https://placekitten.com/200" alt="gatitos">
